Fixed an invalid use of an Intger object.  It was deprecated and removed.